Fixed deprecated methods